@@ -1,8 +1,5 @@
 package com.bbva.dao;
 
-import com.bbva.core.results.DataResult;
-import com.bbva.core.results.ErrorDataResult;
-import com.bbva.core.results.SuccessDataResult;
 import com.bbva.database.MyBatisConnectionFactory;
 import com.bbva.database.mappers.UseCaseMapper;
 import com.bbva.dto.use_case.request.UpdateOrInsertUseCaseDtoRequest;
@@ -11,14 +8,13 @@ import com.bbva.dto.use_case.response.UpdateOrInsertDtoResponse;
 import com.bbva.dto.use_case.response.UseCaseInputsDtoResponse;
 import com.bbva.dto.use_case.response.UseCaseInputsFilterDtoResponse;
 import com.bbva.entities.use_case.UseCaseEntity;
-import com.bbva.util.JSONUtils;
 import org.apache.ibatis.session.SqlSession;
 import org.apache.ibatis.session.SqlSessionFactory;
 
+import java.util.Collections;
 import java.util.List;
 import java.util.logging.Level;
 import java.util.logging.Logger;
-import java.util.stream.Collectors;
 
 public class UseCaseReliabilityDao {
 
@@ -31,22 +27,22 @@ public class UseCaseReliabilityDao {
             return mapper.listAllUseCases();
         }catch (Exception e) {
             LOGGER.log(Level.SEVERE, e.getMessage(), e);
-            return null;
+            return Collections.emptyList();
         }
     }
 
-    public DataResult<UpdateOrInsertDtoResponse> updateOrInsertUseCase(UpdateOrInsertUseCaseDtoRequest dto) {
+    public UpdateOrInsertDtoResponse updateOrInsertUseCase(UpdateOrInsertUseCaseDtoRequest dto) {
         try {
             SqlSessionFactory sqlSessionFactory = MyBatisConnectionFactory.getInstance();
             try (SqlSession session = sqlSessionFactory.openSession()) {
                 UseCaseMapper mapper = session.getMapper(UseCaseMapper.class);
                 UpdateOrInsertDtoResponse result = mapper.updateOrInsertUseCase(dto);
                 session.commit();
-                return new SuccessDataResult(result);
+                return result;
             }
         } catch (Exception e) {
             LOGGER.log(Level.SEVERE, e.getMessage(), e);
-            return new ErrorDataResult(null, "500", e.getMessage());
+            return new UpdateOrInsertDtoResponse();
         }
     }
 
@@ -64,20 +60,19 @@ public class UseCaseReliabilityDao {
                     dto.getProjectName()
             );
         }
-        recordsCount = (lista.size() > 0) ? (int) lista.stream().count() : 0;
-        pagesAmount = dto.getRecords_amount() > 0 ? (int) Math.ceil(recordsCount.floatValue() / dto.getRecords_amount().floatValue()) : 1;
+        recordsCount = (lista.isEmpty()) ? (int) lista.stream().count() : 0;
+        pagesAmount = dto.getRecordsAmount() > 0 ? (int) Math.ceil(recordsCount.floatValue() / dto.getRecordsAmount().floatValue()) : 1;
 
-        if (dto.getRecords_amount() > 0) {
+        if (dto.getRecordsAmount() > 0) {
             lista = lista.stream()
-                    .skip(dto.getRecords_amount() * (dto.getPage() - 1))
-                    .limit(dto.getRecords_amount())
-                    .collect(Collectors.toList());
+                    .skip((long) dto.getRecordsAmount() * (dto.getPage() - 1))
+                    .limit(dto.getRecordsAmount())
+                    .toList();
         }
 
         response.setCount(recordsCount);
-        response.setPages_amount(pagesAmount);
+        response.setPagesAmount(pagesAmount);
         response.setData(lista);
-        LOGGER.info(JSONUtils.convertFromObjectToJson(response.getData()));
         return response;
     }
 }
